--- a/manifest.json
+++ b/manifest.json
@@ -16,7 +16,7 @@
       "*://*.linkedin.com/*"
     ],
     "background": {
-      "scripts": ["background.js"]
+      "service_worker": ["background.js"]
     },
     "content_scripts": [
       {
